@@ -776,7 +776,77 @@ name|solr
 operator|.
 name|schema
 operator|.
+name|DoublePointField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
 name|FieldType
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|FloatPointField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|IntPointField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|LongPointField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|SchemaField
 import|;
 end_import
 
@@ -1579,8 +1649,8 @@ operator|.
 name|getSlowAtomicReader
 argument_list|()
 decl_stmt|;
-name|FieldType
-name|fieldType
+name|SchemaField
+name|schemaField
 init|=
 name|searcher
 operator|.
@@ -1591,6 +1661,11 @@ name|getField
 argument_list|(
 name|field
 argument_list|)
+decl_stmt|;
+name|FieldType
+name|fieldType
+init|=
+name|schemaField
 operator|.
 name|getType
 argument_list|()
@@ -1732,6 +1807,14 @@ operator|||
 name|fieldType
 operator|instanceof
 name|TrieLongField
+operator|||
+name|fieldType
+operator|instanceof
+name|IntPointField
+operator|||
+name|fieldType
+operator|instanceof
+name|LongPointField
 condition|)
 block|{
 name|nullValue
@@ -1750,6 +1833,10 @@ condition|(
 name|fieldType
 operator|instanceof
 name|TrieFloatField
+operator|||
+name|fieldType
+operator|instanceof
+name|FloatPointField
 condition|)
 block|{
 name|nullValue
@@ -1773,6 +1860,10 @@ condition|(
 name|fieldType
 operator|instanceof
 name|TrieDoubleField
+operator|||
+name|fieldType
+operator|instanceof
+name|DoublePointField
 condition|)
 block|{
 name|nullValue
@@ -1798,6 +1889,10 @@ condition|(
 name|fieldType
 operator|instanceof
 name|TrieFloatField
+operator|||
+name|fieldType
+operator|instanceof
+name|FloatPointField
 condition|)
 block|{
 name|nullValue
@@ -1816,6 +1911,10 @@ condition|(
 name|fieldType
 operator|instanceof
 name|TrieDoubleField
+operator|||
+name|fieldType
+operator|instanceof
+name|DoublePointField
 condition|)
 block|{
 name|nullValue
@@ -2658,6 +2757,28 @@ operator|<
 literal|200
 condition|)
 block|{
+if|if
+condition|(
+name|fieldType
+operator|.
+name|isPointField
+argument_list|()
+condition|)
+block|{
+name|groupQuery
+operator|=
+name|getPointGroupQuery
+argument_list|(
+name|schemaField
+argument_list|,
+name|count
+argument_list|,
+name|groupSet
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|groupQuery
 operator|=
 name|getGroupQuery
@@ -2671,6 +2792,7 @@ argument_list|,
 name|groupSet
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 name|Collector
@@ -3184,91 +3306,20 @@ expr_stmt|;
 block|}
 else|else
 block|{
-if|if
-condition|(
-name|fieldType
-operator|instanceof
-name|TrieIntField
-operator|||
-name|fieldType
-operator|instanceof
-name|TrieLongField
-condition|)
-block|{
 name|outMap
 operator|.
 name|add
 argument_list|(
-name|Long
-operator|.
-name|toString
+name|numericToString
 argument_list|(
+name|fieldType
+argument_list|,
 name|groupValue
 argument_list|)
 argument_list|,
 name|slice
 argument_list|)
 expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|fieldType
-operator|instanceof
-name|TrieFloatField
-condition|)
-block|{
-name|outMap
-operator|.
-name|add
-argument_list|(
-name|Float
-operator|.
-name|toString
-argument_list|(
-name|Float
-operator|.
-name|intBitsToFloat
-argument_list|(
-operator|(
-name|int
-operator|)
-name|groupValue
-argument_list|)
-argument_list|)
-argument_list|,
-name|slice
-argument_list|)
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|fieldType
-operator|instanceof
-name|TrieDoubleField
-condition|)
-block|{
-name|outMap
-operator|.
-name|add
-argument_list|(
-name|Double
-operator|.
-name|toString
-argument_list|(
-name|Double
-operator|.
-name|longBitsToDouble
-argument_list|(
-name|groupValue
-argument_list|)
-argument_list|)
-argument_list|,
-name|slice
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 block|}
@@ -4718,11 +4769,6 @@ init|=
 operator|-
 literal|1
 decl_stmt|;
-name|String
-name|stringVal
-init|=
-literal|null
-decl_stmt|;
 while|while
 condition|(
 name|it
@@ -4739,78 +4785,18 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|ft
-operator|instanceof
-name|TrieIntField
-operator|||
-name|ft
-operator|instanceof
-name|TrieLongField
-condition|)
-block|{
+name|String
 name|stringVal
-operator|=
-name|Long
-operator|.
-name|toString
+init|=
+name|numericToString
 argument_list|(
+name|ft
+argument_list|,
 name|cursor
 operator|.
 name|value
 argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-if|if
-condition|(
-name|ft
-operator|instanceof
-name|TrieFloatField
-condition|)
-block|{
-name|stringVal
-operator|=
-name|Float
-operator|.
-name|toString
-argument_list|(
-name|Float
-operator|.
-name|intBitsToFloat
-argument_list|(
-operator|(
-name|int
-operator|)
-name|cursor
-operator|.
-name|value
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|stringVal
-operator|=
-name|Double
-operator|.
-name|toString
-argument_list|(
-name|Double
-operator|.
-name|longBitsToDouble
-argument_list|(
-name|cursor
-operator|.
-name|value
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
+decl_stmt|;
 name|ft
 operator|.
 name|readableToIndexed
@@ -4849,6 +4835,199 @@ argument_list|)
 argument_list|)
 argument_list|)
 return|;
+block|}
+DECL|method|getPointGroupQuery
+specifier|private
+name|Query
+name|getPointGroupQuery
+parameter_list|(
+name|SchemaField
+name|sf
+parameter_list|,
+name|int
+name|size
+parameter_list|,
+name|LongHashSet
+name|groupSet
+parameter_list|)
+block|{
+name|Iterator
+argument_list|<
+name|LongCursor
+argument_list|>
+name|it
+init|=
+name|groupSet
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|values
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|size
+argument_list|)
+decl_stmt|;
+name|FieldType
+name|ft
+init|=
+name|sf
+operator|.
+name|getType
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|LongCursor
+name|cursor
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|values
+operator|.
+name|add
+argument_list|(
+name|numericToString
+argument_list|(
+name|ft
+argument_list|,
+name|cursor
+operator|.
+name|value
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+operator|new
+name|SolrConstantScoreQuery
+argument_list|(
+operator|new
+name|QueryWrapperFilter
+argument_list|(
+name|sf
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|getSetQuery
+argument_list|(
+literal|null
+argument_list|,
+name|sf
+argument_list|,
+name|values
+argument_list|)
+argument_list|)
+argument_list|)
+return|;
+block|}
+DECL|method|numericToString
+specifier|private
+name|String
+name|numericToString
+parameter_list|(
+name|FieldType
+name|fieldType
+parameter_list|,
+name|long
+name|val
+parameter_list|)
+block|{
+if|if
+condition|(
+name|fieldType
+operator|.
+name|getNumberType
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+switch|switch
+condition|(
+name|fieldType
+operator|.
+name|getNumberType
+argument_list|()
+condition|)
+block|{
+case|case
+name|INTEGER
+case|:
+case|case
+name|LONG
+case|:
+return|return
+name|Long
+operator|.
+name|toString
+argument_list|(
+name|val
+argument_list|)
+return|;
+case|case
+name|FLOAT
+case|:
+return|return
+name|Float
+operator|.
+name|toString
+argument_list|(
+name|Float
+operator|.
+name|intBitsToFloat
+argument_list|(
+operator|(
+name|int
+operator|)
+name|val
+argument_list|)
+argument_list|)
+return|;
+case|case
+name|DOUBLE
+case|:
+return|return
+name|Double
+operator|.
+name|toString
+argument_list|(
+name|Double
+operator|.
+name|longBitsToDouble
+argument_list|(
+name|val
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"FieldType must be INT,LONG,FLOAT,DOUBLE found "
+operator|+
+name|fieldType
+argument_list|)
+throw|;
 block|}
 DECL|method|getGroupQuery
 specifier|private
